--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,7 +25,15 @@
     "filter": "Фильтр",
     "sort": "Сортировка",
     "apply": "Применить",
-    "reset": "Сбросить"
+    "reset": "Сбросить",
+    "back": "Назад",
+    "main": "Главная",
+    "modalExit": "Закрыть"
+  },
+  "reg": {
+    "name": "имя пользователя",
+    "pass": "пароль",
+    "registration": "Регистрация"
   },
   "header": {
     "home": "Главная",
@@ -36,7 +44,20 @@
     "profile": "Профиль",
     "login": "Войти",
     "logout": "Выйти",
-    "signup": "Регистрация"
+    "signup": "Регистрация",
+    "username": "Имя пользователя",
+    "pass": "пароль",
+    "auth": "Авторизация",
+    "loggingIn": "Вход...",
+    "noAccount": "Нет аккаунта?",
+    "haveAccount": "Уже есть аккаунт?",
+    "registring": "Регистрация...",
+    "personalData": "Персональные данные",
+    "mySections": "Мои разделы",
+    "myProfile": "Мой профиль",
+    "myOrders": "Мои заказы",
+    "favorites": "Избранное",
+    "exit": "Выход"
   },
   "product": {
     "products": "Товары",
@@ -66,7 +87,14 @@
     "updateCart": "Обновить корзину",
     "cartSummary": "Итоги корзины",
     "estimatedTotal": "Примерный итог",
-    "checkout": "Оформить заказ"
+    "checkout": "Оформить заказ",
+    "addProduct": "Добавить товары в корзину",
+    "goodsworth": "товаров на сумму",
+    "products": "Товары",
+    "delivery": "Доставка",
+    "free": "Бесплатно",
+    "promo": "Введите промокод",
+    "orderinit": "Оформить заказ"
   },
   "filters": {
     "categories": "Категории",
@@ -93,7 +121,11 @@
     "paymentMethods": "Способы оплаты",
     "wishlist": "Список желаний",
     "notifications": "Уведомления",
-    "settings": "Настройки"
+    "settings": "Настройки",
+    "myOrders": "Мои заказы",
+    "myFav": "Избранное",
+    "mySupport": "Поддержка",
+    "exit": "Выход"
   },
   "messages": {
     "addedToCart": "Товар добавлен в корзину",
@@ -104,5 +136,30 @@
     "loginRequired": "Требуется вход в систему",
     "searchNoResults": "По вашему запросу ничего не найдено",
     "tryDifferentKeywords": "Попробуйте другие ключевые слова"
+  },
+  "orders": {
+    "noOrders": "У вас еще нет заказов.",
+    "firstBuy": "Сделайте первую покупку, чтобы увидеть историю заказов здесь",
+    "startShop": "Начать покупки",
+    "clearAll": "Очистить все",
+    "moreDetails": "Подробнее",
+    "product": "товар",
+    "inThisCategory": "в этой категории",
+    "ed.": "",
+    "mn.": "",
+    "continueBuy": "Продолжить покупки",
+    "goCart": "Перейти в корзину",
+    "order": "заказ",
+    "Order": "Заказ",
+    "repeatOrder": "Повторить заказ",
+    "done": "Выполнен",
+    "pending": "В обработке",
+    "cancelled": "Отменен"
+  },
+  "favorites": {
+    "noFav": "У вас пока нет избранных товаров.",
+    "firstFav": "Добавляйте товары, нажимая ♡ на карточках товаров",
+    "startShop": "Начать покупки",
+    "fav": "Избранное"
   }
 }
